--- a/index.html
+++ b/index.html
@@ -65,26 +65,44 @@
                     <div class="inputs-container" role="form-inputs">
                         <label>
                             Imię
-                            <input type="text" name="username" class="basic-input" />
+                            <div class="input-wraper">
+                                <svg width="18" height="18">
+                                    <use href="./images/icons.svg#icon-person-black-18dp1" />
+                                </svg>
+                                <input type="text" name="user-name" class="basic-input" required />
+                            </div>
                         </label>
                         <label>
                             Telefon
-                            <input type="tel" name="user-phone" class="basic-input" />
+                            <div class="input-wraper">
+                                <svg width="18" height="18">
+                                    <use href="./images/icons.svg#icon-phone-black-18dp1" />
+                                </svg>
+                                <input type="tel" name="user-phone" class="basic-input" />
+                            </div>
                         </label>
                         <label>
                             Email
-                            <input type="email" name="comment-user-email" class="basic-input" />
+                            <div class="input-wraper">
+                                <svg width="18" height="18">
+                                    <use href="./images/icons.svg#icon-email-black-18dp1" />
+                                </svg>
+                                <input type="email" name="comment-user-email" class="basic-input" required />
+                            </div>
                         </label>
                         <label>
                             Komentarz
                             <textarea name="user-comment" placeholder="Wprowadź tekst"></textarea>
                         </label>
                     </div>
-                    <label class="checbox-rules">
-                        <input class="checkbox-rules" type="checkbox" name="regulamin" />
-                        Oświadczam iż akceptuję
+                    <label class="rules-wraper">
+                        <input type="checkbox" name="accept-rules" required />
+                        <svg class="check-icon" width="16" height="15">
+                            <use href="./images/icons.svg#icon-check-vector" />
+                        </svg>
+                        <span>Oświadczam iż akceptuję</span>
                         <a href="#">Regulamin</a> i
-                        <a href="#">Politykę Prywatności</a>.
+                        <a href="#">Politykę Prywatności.</a>
                     </label>
                     <button class="send-form-button" type="submit">Wyślij</button>
                 </form>
